# template-python-pipeline

./: README.md  cookiecutter.json
{{cookiecutter.repo_name}}/: .bumpversion.cfg  Dockerfile  MANIFEST.in  README.md  environment.yml  requirements.in  setup.cfg  setup.py  tox.ini
{{cookiecutter.repo_name}}/notebooks/: README.md
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py  __main__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/commands/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/config/: .gitignore  __init__.py  {{cookiecutter.repo_name}}.ini  {{cookiecutter.repo_name}}.toml  {{cookiecutter.repo_name}}_local.toml
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/pipelines/: __init__.py  {{cookiecutter.default_pipeline}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/utils/: config.py  log.py
